// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings /> can navigate Autoplay Settings 1`] = `
<div>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. To close this dialog, hit escape.
      </p>
      <div>
        <div
          class="euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel euiContextMenu__panel"
            tabindex="-1"
          >
            <div
              class="euiContextMenuPanelTitle"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="play"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Auto Play
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Toolbar
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Autoplay Settings 2`] = `
<div>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-isOpen-top"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. To close this dialog, hit escape.
      </p>
      <div>
        <div
          class="euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutLeft"
            tabindex="-1"
          >
            <div
              class="euiContextMenuPanelTitle"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="play"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Auto Play
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Toolbar
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInLeft"
            tabindex="-1"
          >
            <button
              class="euiContextMenuPanelTitle"
              data-test-subj="contextMenuPanelTitleButton"
              type="button"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                <span
                  class="euiContextMenu__icon"
                  data-euiicon-type="arrowLeft"
                />
                <span
                  class="euiContextMenu__text"
                >
                  Auto Play
                </span>
              </span>
            </button>
            <div>
              <div
                style="padding: 16px;"
              >
                <div
                  class="euiSwitch emotion-euiSwitch"
                >
                  <button
                    aria-checked="false"
                    aria-labelledby="generated-id"
                    class="euiSwitch__button"
                    id="cycle"
                    name="cycle"
                    role="switch"
                    type="button"
                  >
                    <span
                      class="euiSwitch__body"
                    >
                      <span
                        class="euiSwitch__thumb"
                      />
                      <span
                        class="euiSwitch__track"
                      >
                        <span
                          class="euiSwitch__icon"
                          data-euiicon-type="cross"
                        />
                        <span
                          class="euiSwitch__icon euiSwitch__icon--checked"
                          data-euiicon-type="check"
                        />
                      </span>
                    </span>
                  </button>
                  <span
                    class="euiSwitch__label"
                    id="generated-id"
                  >
                    Cycle Slides
                  </span>
                </div>
                <hr
                  class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium emotion-euiHorizontalRule-full-m"
                />
                <form>
                  <div
                    class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
                  >
                    <div
                      class="euiFlexItem emotion-euiFlexItem-grow-1"
                    >
                      <div
                        class="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
                        id="generated-id-row"
                      >
                        <div
                          class="euiFormRow__labelWrapper"
                        >
                          <label
                            class="euiFormLabel euiFormRow__label"
                            for="generated-id"
                            id="generated-id-label"
                          >
                            Set a custom interval
                          </label>
                        </div>
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <div
                            class="euiFormControlLayout euiFormControlLayout--compressed"
                          >
                            <div
                              class="euiFormControlLayout__childrenWrapper"
                            >
                              <input
                                aria-describedby="generated-id-help-0"
                                aria-invalid="false"
                                class="euiFieldText euiFieldText--compressed"
                                id="generated-id"
                                type="text"
                                value="5s"
                              />
                            </div>
                          </div>
                          <div
                            class="euiFormHelpText euiFormRow__text"
                            id="generated-id-help-0"
                          >
                            Use shorthand notation, like 30s, 10m, or 1h
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    >
                      <div
                        class="euiFormRow euiFormRow--hasEmptyLabelSpace euiFormRow--compressed"
                        id="generated-id-row"
                      >
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <button
                            class="euiButton emotion-euiButtonDisplay-s-s-base-primary"
                            id="generated-id"
                            style="min-inline-size: auto;"
                            type="submit"
                          >
                            <span
                              class="emotion-euiButtonDisplayContent"
                            >
                              <span
                                class="eui-textTruncate"
                              >
                                Set
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 1`] = `
<div>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. To close this dialog, hit escape.
      </p>
      <div>
        <div
          class="euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel euiContextMenu__panel"
            tabindex="-1"
          >
            <div
              class="euiContextMenuPanelTitle"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="play"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Auto Play
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Toolbar
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 2`] = `
<div>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-isOpen-top"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. To close this dialog, hit escape.
      </p>
      <div>
        <div
          class="euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutLeft"
            tabindex="-1"
          >
            <div
              class="euiContextMenuPanelTitle"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="play"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Auto Play
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Toolbar
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInLeft"
            tabindex="-1"
          >
            <button
              class="euiContextMenuPanelTitle"
              data-test-subj="contextMenuPanelTitleButton"
              type="button"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                <span
                  class="euiContextMenu__icon"
                  data-euiicon-type="arrowLeft"
                />
                <span
                  class="euiContextMenu__text"
                >
                  Toolbar
                </span>
              </span>
            </button>
            <div>
              <div
                style="padding: 16px;"
              >
                <div
                  class="euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiSwitch emotion-euiSwitch"
                    >
                      <button
                        aria-checked="false"
                        aria-describedby="generated-id-help-0"
                        aria-labelledby="generated-id"
                        class="euiSwitch__button"
                        data-test-subj="hideToolbarSwitch"
                        id="generated-id"
                        name="toolbarHide"
                        role="switch"
                        type="button"
                      >
                        <span
                          class="euiSwitch__body"
                        >
                          <span
                            class="euiSwitch__thumb"
                          />
                          <span
                            class="euiSwitch__track"
                          >
                            <span
                              class="euiSwitch__icon"
                              data-euiicon-type="cross"
                            />
                            <span
                              class="euiSwitch__icon euiSwitch__icon--checked"
                              data-euiicon-type="check"
                            />
                          </span>
                        </span>
                      </button>
                      <span
                        class="euiSwitch__label"
                        id="generated-id"
                      >
                        Hide Toolbar
                      </span>
                    </div>
                    <div
                      class="euiFormHelpText euiFormRow__text"
                      id="generated-id-help-0"
                    >
                      Hide the toolbar when the mouse is not within the Canvas?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Settings /> can navigate Toolbar Settings, closes when activated 3`] = `
<div>
  <div
    data-eui="EuiFocusTrap"
  >
    <div
      aria-describedby="generated-id"
      aria-live="off"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel"
      data-popover-panel="true"
      role="dialog"
      style="top: -16px; left: -22px; z-index: 2000;"
      tabindex="0"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-top"
        data-popover-arrow="top"
        style="left: 10px; top: 0px;"
      />
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a dialog. To close this dialog, hit escape.
      </p>
      <div>
        <div
          class="euiContextMenu"
          style="height: 0px;"
        >
          <div
            class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txOutLeft"
            tabindex="-1"
          >
            <div
              class="euiContextMenuPanelTitle"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                Settings
              </span>
            </div>
            <div>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="play"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Auto Play
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
              <button
                class="euiContextMenuItem"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="boxesHorizontal"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Toolbar
                  </span>
                  <span
                    class="euiContextMenu__arrow"
                    data-euiicon-type="arrowRight"
                  />
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiContextMenuPanel euiContextMenu__panel euiContextMenuPanel-txInLeft"
            tabindex="-1"
          >
            <button
              class="euiContextMenuPanelTitle"
              data-test-subj="contextMenuPanelTitleButton"
              type="button"
            >
              <span
                class="euiContextMenu__itemLayout"
              >
                <span
                  class="euiContextMenu__icon"
                  data-euiicon-type="arrowLeft"
                />
                <span
                  class="euiContextMenu__text"
                >
                  Toolbar
                </span>
              </span>
            </button>
            <div>
              <div
                style="padding: 16px;"
              >
                <div
                  class="euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiSwitch emotion-euiSwitch"
                    >
                      <button
                        aria-checked="true"
                        aria-describedby="generated-id-help-0"
                        aria-labelledby="generated-id"
                        class="euiSwitch__button"
                        data-test-subj="hideToolbarSwitch"
                        id="generated-id"
                        name="toolbarHide"
                        role="switch"
                        type="button"
                      >
                        <span
                          class="euiSwitch__body"
                        >
                          <span
                            class="euiSwitch__thumb"
                          />
                          <span
                            class="euiSwitch__track"
                          >
                            <span
                              class="euiSwitch__icon"
                              data-euiicon-type="cross"
                            />
                            <span
                              class="euiSwitch__icon euiSwitch__icon--checked"
                              data-euiicon-type="check"
                            />
                          </span>
                        </span>
                      </button>
                      <span
                        class="euiSwitch__label"
                        id="generated-id"
                      >
                        Hide Toolbar
                      </span>
                    </div>
                    <div
                      class="euiFormHelpText euiFormRow__text"
                      id="generated-id-help-0"
                    >
                      Hide the toolbar when the mouse is not within the Canvas?
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
